--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
+  <link rel="stylesheet" href="static/css/style.css">
+</head> 
 
 <body>
 
@@ -33,10 +34,10 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="gauge"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="bar"></div>
       </div>
     </div>
     <div class="row">
